--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Gitlab Message</title>
 </head>
-<style type="text/css">
+<style>
     #url {
         display: inline-block;
         width: 600px;
@@ -21,7 +21,7 @@
 <script src="js/lib/vue/vue.js"></script>
 <script src="js/index.js"></script>
 <script>
-    var text = " # 开发流程说明\n" +
+    const text = " # 开发流程说明\n" +
         " \n" +
         " ## 遵循分支命名规范\n" +
         " \n" +
